# general_hamiltonian_derivatives

v1.0/: .generated.hpp.swp  .main.cpp.swp  .numderivative.hpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  QData.hpp  cmake_install.cmake  hamiltonian_derivatives.hpp  main.cpp  matrix_wrapper.hpp  numderivative.hpp
v1.0/tests/co2_ar/general/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
v1.0/tests/co2_ar/traditional/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix_euler.cpp  matrix_euler.hpp
v1.0/tests/n2_n2/general/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  generated.hpp  main.cpp
v1.0/tests/n2_n2/traditional/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix_euler.cpp  matrix_euler.hpp
v1.0/trajectory-python-integration/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  co2-ar-derivatives-object.hpp  compute-derivatives.cpp  compute-derivatives.ipynb  compute-hamiltonian.cpp  compute-trajectory.cpp  generated.hpp  hamiltonian-parameters.hpp  phase-space-point.inp  phase_point.cpp  phase_point.hpp  trajectory.cpp  trajectory.hpp  trajectory.inp  trajectory_plotter.py  utilities.py
v1.0/trajectory-python-integration/.ipynb_checkpoints/: compute-derivatives-checkpoint.ipynb  compute-trajectory-checkpoint.ipynb
